2003-04-05  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b17

	* Fixed minor bug in config wizard that runs the "shutterfly without
	  donation" and "fotokasten" print options together on one line.

2003-03-30  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b16

	* Fixed a bug in the mirroring code on win32 where the serial.dat file
	  would wind up with a \r instead of a \n causing the comparison to
	  fail.  Now we get rid of the \n altogether.

2003-02-24  John Kirkland <jpk@bl.org> 1.3.4-cvs-b15

	* Merged GRcreateNewAlbum in gallery_remote2.php with createNewAlbum
	  in util.php per Pierre's request.

2003-02-24  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.4-cvs-b14

	* gallery_remote2.php: check to prevent new album creation to overwrite
	  an existing album.

2003-02-24  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.4-cvs-b13

	* Fixed method name collision between gallery_remote2.php and util.php
	  which caused GalleryRemote to be unable to log in.

2003-02-23  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b12

	* Fix boneheaded mistake in getAlbumbyName(): inverted logic 
	  on strcasecmp

	* Added <IfModule> calls around php_value flags in setup/.htaccess.
	  This will make Gallery work better on systems that have PHP as CGI
	  only.

	* Added Troy Edwards (vallimar) to the AUTHORS file.

	* Added a fix to handle porting from pre-v1.2 Galleries when the
	  Gallery_User class was simply called User. 

2003-01-29  John Kirkland <jpk@bl.org> 1.3.4-cvs-b11

	* Moved process() from save_photos.php to util.php - processNewImage()
	  so it could be used by the xp publishing wizard.

	* Moved msg() from save_photos.php to util.php - processingMsg() so it 
	  could be used by the xp publishing wizard.
	
	* Created a createNewAlbum($parentName) function in util.php from
	  code extracted from do_command.php.

	* Modified xp publishing wizard to use new functions in util.php, 
	  removing duplicated code.
