@@ -1,3 +1,10 @@
+2003-04-18  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b18
+
+	* Added Steve Lacy's auto-rotate patch which lets Gallery
+	  automatically attempt to rotate JPEG images on upload, based on
+	  the orientation information that some digital cameras store in
+	  EXIF data.
+
 2003-04-05  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b17
 
 	* Fixed minor bug in config wizard that runs the "shutterfly without
